kubernetes/apps/database/harbor/templates/ingress_patch.yaml
---
# yamllint disable rule:line-length
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/ingress.json
# yamllint enable rule:line-length
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/enable-global-auth: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: harbor-api-ingress
spec:
  ingressClassName: internal
  rules:
    - host: "registry.<path:kubernetes/data/internal/base#ROOT_DOMAIN>"
      http:
        paths:
          # docker registry
          - backend:
              service:
                name: harbor-core
                port:
                  number: 80
            # must be regex to override path defined by helm ingress
            path: /(?:v2|service|c)(?:$|/.*)
            pathType: Prefix
  tls:
    - hosts:
        - "registry.<path:kubernetes/data/internal/base#ROOT_DOMAIN>"
